ColinFay published a site update

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2021-03-10" />
+<meta name="date" content="2021-04-02" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -487,7 +487,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Engineering Production-Grade Shiny Apps</h1>
 <p class="author"><em>Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard</em></p>
-<p class="date"><em>2021-03-10</em></p>
+<p class="date"><em>2021-04-02</em></p>
 </div>
 <div id="introduction" class="section level1 unnumbered">
 <h1>Introduction</h1>
@@ -625,7 +625,7 @@ You can also find more resources in the bibliography.</p>
 But good news!
 <strong>A large portion of this book is about the methodology, and not purely the technology</strong>, so even if some of the packages and code sections used in this book can (and will) become obsolete, a significant part of what is described in this book will still be relevant.</p>
 <p>When reading this book, remember that they are a “snapshot” of various technologies and packages, which might some day become out of date, have breaking changes, or even disappear.
-The last revision to the pages you’re reading now has been done on the 2021-03-10.
+The last revision to the pages you’re reading now has been done on the 2021-04-02.
 We will <strong>try to update the online version whenever changes are made to the packages used in this book</strong>, so feel free to browse the online version<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a> for up-to-date information.</p>
 </div>
 <div id="software-information-and-conventions" class="section level2 unnumbered">
@@ -652,7 +652,7 @@ A big thanks also to <a href="https://divadnojnarg.github.io/">David Granjon</a>
 <div id="contributors-to-this-book" class="section level3 unnumbered">
 <h3>Contributors to this book</h3>
 <p>We want to thank all the people that have contributed to this book, either via Pull Requests, Issue on the book Github Repository, or via direct conversation.</p>
-<p><a href="https://github.com/allaway">@allaway</a>, <a href="https://github.com/andreferraribr">@andreferraribr</a>, <a href="https://github.com/aronolof">@aronolof</a>, <a href="https://github.com/BenjaminLouis">@BenjaminLouis</a>, <a href="https://github.com/bstrain71">@bstrain71</a>, <a href="https://github.com/cedricbriandgithub">@cedricbriandgithub</a>, <a href="https://github.com/dA505819">@dA505819</a>, <a href="https://github.com/dan-reznik">@dan-reznik</a>, <a href="https://github.com/davidpb90">@davidpb90</a>, <a href="https://github.com/denrou">@denrou</a>, <a href="https://github.com/DianeBeldame">@DianeBeldame</a>, <a href="https://github.com/eroten">@eroten</a>, <a href="https://github.com/espinielli">@espinielli</a>, <a href="https://github.com/etiennebacher">@etiennebacher</a>, <a href="https://github.com/fBedecarrats">@fBedecarrats</a>, <a href="https://github.com/flrd">@flrd</a>, <a href="https://github.com/frankschmitt">@frankschmitt</a>, <a href="https://github.com/FrieseWoudloper">@FrieseWoudloper</a>, <a href="https://github.com/giocomai">@giocomai</a>, <a href="https://github.com/Guillaume-Lombardo">@Guillaume-Lombardo</a>, <a href="https://github.com/gwd999">@gwd999</a>, <a href="https://github.com/hadley">@hadley</a>, <a href="https://github.com/hsm207">@hsm207</a>, <a href="https://github.com/jamespooley">@jamespooley</a>, <a href="https://github.com/jcrodriguez1989">@jcrodriguez1989</a>, <a href="https://github.com/jonmcalder">@jonmcalder</a>, <a href="https://github.com/jpmarindiaz">@jpmarindiaz</a>, <a href="https://github.com/julianstanley">@julianstanley</a>, <a href="https://github.com/kdaily">@kdaily</a>, <a href="https://github.com/maelle">@maelle</a>, <a href="https://github.com/naomistrandberg">@naomistrandberg</a>, <a href="https://github.com/psychometrician">@psychometrician</a>, <a href="https://github.com/rainiercito">@rainiercito</a>, <a href="https://github.com/ronniemo">@ronniemo</a>, <a href="https://github.com/rpodcast">@rpodcast</a>, <a href="https://github.com/sowla">@sowla</a>, <a href="https://github.com/tellyshia">@tellyshia</a>, <a href="https://github.com/ukyouhanDVSA">@ukyouhanDVSA</a>, <a href="https://github.com/xari">@xari</a>, and <a href="https://github.com/xvrdm">@xvrdm</a>.</p>
+<p><a href="https://github.com/allaway">@allaway</a>, <a href="https://github.com/andreferraribr">@andreferraribr</a>, <a href="https://github.com/aronolof">@aronolof</a>, <a href="https://github.com/BenjaminLouis">@BenjaminLouis</a>, <a href="https://github.com/bstrain71">@bstrain71</a>, <a href="https://github.com/cedricbriandgithub">@cedricbriandgithub</a>, <a href="https://github.com/dA505819">@dA505819</a>, <a href="https://github.com/dan-reznik">@dan-reznik</a>, <a href="https://github.com/davidpb90">@davidpb90</a>, <a href="https://github.com/denrou">@denrou</a>, <a href="https://github.com/DianeBeldame">@DianeBeldame</a>, <a href="https://github.com/eroten">@eroten</a>, <a href="https://github.com/espinielli">@espinielli</a>, <a href="https://github.com/etiennebacher">@etiennebacher</a>, <a href="https://github.com/fBedecarrats">@fBedecarrats</a>, <a href="https://github.com/flrd">@flrd</a>, <a href="https://github.com/frankschmitt">@frankschmitt</a>, <a href="https://github.com/FrieseWoudloper">@FrieseWoudloper</a>, <a href="https://github.com/giocomai">@giocomai</a>, <a href="https://github.com/Guillaume-Lombardo">@Guillaume-Lombardo</a>, <a href="https://github.com/gwd999">@gwd999</a>, <a href="https://github.com/hadley">@hadley</a>, <a href="https://github.com/hsm207">@hsm207</a>, <a href="https://github.com/jamespooley">@jamespooley</a>, <a href="https://github.com/jcrodriguez1989">@jcrodriguez1989</a>, <a href="https://github.com/jonmcalder">@jonmcalder</a>, <a href="https://github.com/josbop">@josbop</a>, <a href="https://github.com/jpmarindiaz">@jpmarindiaz</a>, <a href="https://github.com/julianstanley">@julianstanley</a>, <a href="https://github.com/kdaily">@kdaily</a>, <a href="https://github.com/maelle">@maelle</a>, <a href="https://github.com/naomistrandberg">@naomistrandberg</a>, <a href="https://github.com/psychometrician">@psychometrician</a>, <a href="https://github.com/rainiercito">@rainiercito</a>, <a href="https://github.com/ronniemo">@ronniemo</a>, <a href="https://github.com/rpodcast">@rpodcast</a>, <a href="https://github.com/sowla">@sowla</a>, <a href="https://github.com/tellyshia">@tellyshia</a>, <a href="https://github.com/ukyouhanDVSA">@ukyouhanDVSA</a>, <a href="https://github.com/xari">@xari</a>, and <a href="https://github.com/xvrdm">@xvrdm</a>.</p>
 
 </div>
 </div>
