--- a/build-yourself-safety-net.html
+++ b/build-yourself-safety-net.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2021-03-10" />
+<meta name="date" content="2021-04-02" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -885,7 +885,7 @@ We also make sure we give it a name with <code>--name</code>, so that we can cal
 <pre><code># A tibble: 1 x 14
   Container Name  ID    CPUPerc MemUsage MemLimit
   &lt;chr&gt;     &lt;chr&gt; &lt;chr&gt;   &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;   
-1 hexmake   hexm… 65ff…    0.04 117.8MiB 6.791GiB
+1 hexmake   hexm… 9547…    0.06 117.7MiB 6.791GiB
 # … with 8 more variables: MemPerc &lt;dbl&gt;, NetI &lt;chr&gt;,
 #   NetO &lt;chr&gt;, BlockI &lt;chr&gt;, BlockO &lt;chr&gt;,
 #   PIDs &lt;int&gt;, record_time &lt;chr&gt;, extra &lt;chr&gt;</code></pre>
