ColinFay published a site update

--- a/references.html
+++ b/references.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2021-06-04" />
+<meta name="date" content="2021-07-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -577,7 +577,7 @@ https://daattali.com/shiny/shinyalert-demo/</a>.</p>
 <p>———. 2020. <em>Liteq: Lightweight Portable Message Queue Using Sqlite</em>. <a href="https://github.com/r-lib/liteq#readme">https://github.com/r-lib/liteq#readme</a>.</p>
 </div>
 <div>
-<p>———. 2021. <em>Cli: Helpers for Developing Command Line Interfaces</em>. <a href="https://github.com/r-lib/cli#readme">https://github.com/r-lib/cli#readme</a>.</p>
+<p>———. 2021. <em>Cli: Helpers for Developing Command Line Interfaces</em>.</p>
 </div>
 <div>
 <p>Csárdi, Gábor, and Winston Chang. 2020. <em>Processx: Execute and Control System Processes</em>.</p>
