--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2021-06-04" />
+<meta name="date" content="2021-07-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -487,7 +487,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Engineering Production-Grade Shiny Apps</h1>
 <p class="author"><em>Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard</em></p>
-<p class="date"><em>2021-06-04</em></p>
+<p class="date"><em>2021-07-15</em></p>
 </div>
 <div id="introduction" class="section level1 unnumbered">
 <h1>Introduction</h1>
@@ -499,6 +499,7 @@ margin-right: 1em;
 </style>
 <p><img src="img/engineering-shiny.jpg" class = "left" width = "300px"></p>
 <p>This book will soon be available in print, published in the <a href="https://www.crcpress.com/go/the-r-series">R Series</a> by Chapman &amp; Hall.</p>
+<p>The online version of this book is free to read here (thanks to Chapman &amp; Hall/CRC), and licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
 <div id="motivation" class="section level2 unnumbered">
 <h2>Motivation</h2>
 <p>This book will not <strong>get you started with <code>{shiny}</code></strong>, nor <strong>talk how to work with <code>{shiny}</code> once it is sent to production</strong>.
@@ -599,7 +600,7 @@ He is enthusiastic and motivated when it comes to rolling up his sleeves for new
 But good news!
 <strong>A large portion of this book is about the methodology, and not purely the technology</strong>, so even if some of the packages and code sections used in this book can (and will) become obsolete, a significant part of what is described in this book will still be relevant.</p>
 <p>When reading this book, remember that they are a “snapshot” of various technologies and packages, which might someday become out of date, have breaking changes, or even disappear.
-The last revisions of the pages you’re reading now have been done on the June 04, 2021.
+The last revisions of the pages you’re reading now have been done on the July 15, 2021.
 We will <strong>try to update the online version whenever changes are made to the packages used in this book</strong>, so feel free to browse the online version<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a> for up-to-date information.</p>
 </div>
 <div id="software-information-and-conventions" class="section level2 unnumbered">
