New look with bs4_book

--- a/gitbook-footer-thinkr.html
+++ b/gitbook-footer-thinkr.html
@@ -1,6 +1,6 @@
 <hr/>
 <footer>
-<a href="rtask.thinkr.fr"><img src="img/logo400_129.png" alt="ThinkR Website"/></a>
+<a href="https://rtask.thinkr.fr"><img src="img/logo400_129.png" alt="ThinkR Website"/></a>
 <!--https://yihui.org/en/2018/09/target-blank/-->
 <script>
   (function() {
