ColinFay published a site update

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 <h1>Introduction<a class="anchor" aria-label="anchor" href="#introduction"><i class="fas fa-link"></i></a>
 </h1>
 <p><img src="img/engineering-shiny.jpg" width="300" align="right" alt="" class="cover"> Welcome to “Engineering Production-Grade Shiny Apps” by <a href="https://colinfay.me/">Colin Fay</a>, <a href="statnmap.com">Sébastien Rochette</a>, <a href="https://rtask.thinkr.fr/consultants-r-experts/vincent-guyader/">Vincent Guyader</a> and <a href="https://rtask.thinkr.fr/consultants-r-experts/cervan-girard">Cervan Girard</a>.</p>
-<p>This book will soon be available in print, published in the <a href="https://www.crcpress.com/go/the-r-series">R Series</a> by Chapman &amp; Hall.</p>
+<p>This book is available in print, published in the <a href="https://www.crcpress.com/go/the-r-series">R Series</a> by Chapman and Hall/CRC.</p>
+<p>You can grab a copy on <a href="https://www.routledge.com/Engineering-Production-Grade-Shiny-Apps/Fay-Rochette-Guyader-Girard/p/book/9780367466022">routledge.com</a>.</p>
 <p>The online version of this book is free to read here (thanks to Chapman &amp; Hall/CRC), and licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
 <div id="motivation" class="section level2 unnumbered">
 <h2>Motivation<a class="anchor" aria-label="anchor" href="#motivation"><i class="fas fa-link"></i></a>
@@ -206,7 +207,7 @@ He is enthusiastic and motivated when it comes to rolling up his sleeves for new
 But good news!
 <strong>A large portion of this book is about the methodology, and not purely the technology</strong>, so even if some of the packages and code sections used in this book can (and will) become obsolete, a significant part of what is described in this book will still be relevant.</p>
 <p>When reading this book, remember that they are a “snapshot” of various technologies and packages, which might someday become out of date, have breaking changes, or even disappear.
-The last revisions of the pages you’re reading now have been done on September 30, 2021.
+The last revisions of the pages you’re reading now have been done on October 22, 2021.
 We will <strong>try to update the online version whenever changes are made to the packages used in this book</strong>, so feel free to browse the online version<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content='&lt;p&gt;Available at &lt;a href="https://engineering-shiny.org" class="uri"&gt;https://engineering-shiny.org&lt;/a&gt;.&lt;/p&gt;'><sup>3</sup></a> for up-to-date information.</p>
 </div>
 <div id="software-information-and-conventions" class="section level2 unnumbered">
@@ -341,7 +342,7 @@ A big thanks also to <a href="https://divadnojnarg.github.io/">David Granjon</a>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-09-30.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-10-22.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
