--- a/common-app-caveats.html
+++ b/common-app-caveats.html
@@ -140,7 +140,7 @@ Or worse, we generate endless reactive loops, aka “the reactive inferno” whe
     <span class="fu"><a href="https://shiny.rstudio.com/reference/shiny/latest/updateSelectInput.html">updateSelectInput</a></span><span class="op">(</span>
       <span class="va">session</span>, 
       <span class="st">"year"</span>, 
-      selected <span class="op">=</span> <span class="fu"><a href="http://lubridate.tidyverse.org/reference/year.html">year</a></span><span class="op">(</span><span class="va">input</span><span class="op">$</span><span class="va">date</span><span class="op">)</span>
+      selected <span class="op">=</span> <span class="fu"><a href="https://lubridate.tidyverse.org/reference/year.html">year</a></span><span class="op">(</span><span class="va">input</span><span class="op">$</span><span class="va">date</span><span class="op">)</span>
     <span class="op">)</span>
   <span class="op">}</span><span class="op">)</span>
   
@@ -150,7 +150,7 @@ Or worse, we generate endless reactive loops, aka “the reactive inferno” whe
     <span class="fu"><a href="https://shiny.rstudio.com/reference/shiny/latest/updateDateInput.html">updateDateInput</a></span><span class="op">(</span>
       <span class="va">session</span>, 
       <span class="st">"date"</span>, 
-      value <span class="op">=</span> <span class="fu">lubridate</span><span class="fu">::</span><span class="fu"><a href="http://lubridate.tidyverse.org/reference/as_date.html">as_date</a></span><span class="op">(</span>
+      value <span class="op">=</span> <span class="fu">lubridate</span><span class="fu">::</span><span class="fu"><a href="https://lubridate.tidyverse.org/reference/as_date.html">as_date</a></span><span class="op">(</span>
         <span class="fu"><a href="https://rdrr.io/r/base/sprintf.html">sprintf</a></span><span class="op">(</span><span class="st">"%s-01-01"</span>, <span class="va">input</span><span class="op">$</span><span class="va">year</span><span class="op">)</span>
       <span class="op">)</span>
     <span class="op">)</span>
@@ -654,7 +654,7 @@ This is where using an R6 for the business logic of your app makes sense: this a
   <span class="co">#  on the input object</span>
   <span class="fu"><a href="https://testthat.r-lib.org/reference/equality-expectations.html">expect_equal</a></span><span class="op">(</span><span class="va">my_data</span><span class="op">$</span><span class="fu">summarize</span><span class="op">(</span><span class="op">)</span>, <span class="fu"><a href="https://rdrr.io/r/base/summary.html">summary</a></span><span class="op">(</span><span class="va">mtcars</span><span class="op">)</span><span class="op">)</span>
 <span class="op">}</span><span class="op">)</span></code></pre></div>
-<pre><code>Test passed 🥳</code></pre>
+<pre><code>Test passed 🎊</code></pre>
 <p>Using R6 allows to rely on these battle-tested tools when it comes to testing functions, something which is made more complex when using other patterns like <code><a href="https://shiny.rstudio.com/reference/shiny/latest/reactiveValues.html">reactiveValues()</a></code>.</p>
 </div>
 </div>
@@ -1108,7 +1108,7 @@ For more extensive coverage of using databases in R, please follow these resourc
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-09-30.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-10-22.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
