--- a/common-app-caveats.html
+++ b/common-app-caveats.html
@@ -654,7 +654,7 @@ This is where using an R6 for the business logic of your app makes sense: this a
   <span class="co">#  on the input object</span>
   <span class="fu"><a href="https://testthat.r-lib.org/reference/equality-expectations.html">expect_equal</a></span><span class="op">(</span><span class="va">my_data</span><span class="op">$</span><span class="fu">summarize</span><span class="op">(</span><span class="op">)</span>, <span class="fu"><a href="https://rdrr.io/r/base/summary.html">summary</a></span><span class="op">(</span><span class="va">mtcars</span><span class="op">)</span><span class="op">)</span>
 <span class="op">}</span><span class="op">)</span></code></pre></div>
-<pre><code>Test passed 🥇</code></pre>
+<pre><code>Test passed 🌈</code></pre>
 <p>Using R6 allows to rely on these battle-tested tools when it comes to testing functions, something which is made more complex when using other patterns like <code><a href="https://shiny.rstudio.com/reference/shiny/latest/reactiveValues.html">reactiveValues()</a></code>.</p>
 </div>
 </div>
