--- a/planning-ahead.html
+++ b/planning-ahead.html
@@ -186,7 +186,7 @@ Working on independent functions to implement features will prevent you from rel
 <li><p><strong>Split your app into <a href="http://shiny.rstudio.com">shiny</a> modules</strong>, so that your app can be though of as a tree, making it possible for every developer to concentrate on one node, and only one, instead of having to think about the global infrastructure when implementing features.</p></li>
 </ul>
 <p>Figure <a href="planning-ahead.html#fig:02-planning-ahead-1">2.1</a> is, for example, a representation of a <a href="http://shiny.rstudio.com">shiny</a> application with modules and sub-modules.
-You will not be able to decipher the text inside the node, but the idea is to give you a sense of how a <a href="http://shiny.rstudio.com">shiny</a> application with modules can be organized and split into smaller pieces that are all related to each other in a tree form.</p>
+You will not be able to decipher the text inside the node, but the idea is to give you a sense of how a <a href="http://shiny.rstudio.com">shiny</a> application with modulse can be organized and split into smaller pieces that are all related to each other in a tree form.</p>
 
 <div class="figure" style="text-align: center">
 <span style="display:block;" id="fig:02-planning-ahead-1"></span>
