ColinFay published a site update

--- a/dont-rush-into-coding.html
+++ b/dont-rush-into-coding.html
@@ -219,7 +219,7 @@ These are more contextual questions which are not directly linked to the applica
 If you are building a <a href="http://shiny.rstudio.com">shiny</a> app for a team of sellers who are always on the road, chances are they will need an app that they can browse from their mobile.
 And developing for mobiles requires a different kind of mindset.<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content='&lt;p&gt;For developing an app that is mobile first, you can have a look at the great &lt;code&gt;{shinyMobile}&lt;/code&gt; &lt;span class="citation"&gt;(Granjon, Perrier, and Rudolf &lt;a href="references.html#ref-R-shinyMobile" role="doc-biblioref"&gt;2019&lt;/a&gt;)&lt;/span&gt; package made by the amazing Rinterface (&lt;a href="https://rinterface.com/" class="uri"&gt;https://rinterface.com/&lt;/a&gt;) team.&lt;/p&gt;'><sup>36</sup></a></p>
 <p>Another good reason why talking to the users is an important step, is that most of the time, <strong>people writing specifications are not the end users and will either request too many features or not enough</strong>.
-Do the users really need that much interactive plots?
+Do the users really need that many interactive plots?
 Do they actually need that much granularity in the information?
 Will they really see a <code>datatable</code> of 15k lines?
 Do they really care about being able to zoom in the <code>dygraph</code> so that they can see the point at a minute scale?
@@ -356,7 +356,7 @@ That way, even if the process of getting permission to write on the company data
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-11-05.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-11-17.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
