--- a/ux-matters.html
+++ b/ux-matters.html
@@ -265,7 +265,7 @@ Here is a pseudo-code pattern for this using the <a href="https://github.com/Col
 What is the difference between the two?</p>
 <ul>
 <li><p>self-evident: “Not needing to be demonstrated or explained; obvious.” <a href="https://www.lexico.com/en/definition/self_evident">lexico.com</a></p></li>
-<li><p>self-explanatory: “Easily understood; not needing explanation.” <a href="https://www.lexico.com/en/definition/self_explanatory" class="uri">https://www.lexico.com/en/definition/self_explanatory</a></p></li>
+<li><p>self-explanatory: “Easily understood; not needing explanation.” <a href="https://www.lexico.com/en/definition/self_explanatory">lexico.com</a></p></li>
 </ul>
 <p>The first is that the app is designed in such a way that there is no learning curve to using it.
 A self-explanatory app has a small learning curve, but it is designed in a way that will make the user understand it in a matter of seconds.</p>
@@ -420,7 +420,7 @@ And, at the same time, helping them correct themselves after an error is the bes
 <span class="fu"><a href="https://shiny.rstudio.com/reference/shiny/latest/shinyApp.html">shinyApp</a></span><span class="op">(</span><span class="va">ui</span>, <span class="va">server</span><span class="op">)</span></code></pre></div>
 <p>Here, as a user, it is way easier to understand what went wrong: we have moved from a red error <code>Error: need finite 'xlim' values</code> to a pop-up explaining what went wrong in the way the user configured the app.
 Perfect way to reduce your bug tracker incoming tickets!</p>
-<p>This is a way to do it natively in <a href="http://shiny.rstudio.com">shiny</a>, but note that you can also use the <code>{shinyAlert}</code> package to implement alerts.
+<p>This is a way to do it natively in <a href="http://shiny.rstudio.com">shiny</a>, but note that you can also use the <a href="https://github.com/daattali/shinyalert">shinyalert</a> package to implement alerts.
 It is also possible to build your own with a little bit of HTML, CSS and JavaScript, as shown in <a href="https://github.com/ColinFay/notifyjsexample">the <code>notifyjsexample</code> repository</a>.</p>
 </div>
 </div>
@@ -905,7 +905,7 @@ It also comes with tools for Java and JavaScript, and notably with a NodeJS modu
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-11-05.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-11-17.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
