ColinFay published a site update

--- a/appendix-b---session-info.html
+++ b/appendix-b---session-info.html
@@ -207,7 +207,7 @@ Package version:
   lubridate_1.7.8             
   magrittr_1.5                
   markdown_1.1                
-  MASS_7.3.51.6               
+  MASS_7.3-51.6               
   matlab_1.0.2                
   Matrix_1.2.18               
   memoise_1.1.0.9000          
