--- a/deploy.html
+++ b/deploy.html
@@ -108,7 +108,7 @@ We will see in this part how you can do that using <a href="https://github.com/T
 </h2>
 <p>Here is a quick checklist of things to think about once your application is ready, and before sending it to production:</p>
 <ul>
-<li><p><input type="checkbox" disabled><code><a href="https://devtools.r-lib.org//reference/check.html">devtools::check()</a></code>, run from the command line, returns 0 errors, 0 warnings, and 0 notes.</p></li>
+<li><p><input type="checkbox" disabled><code><a href="https://devtools.r-lib.org/reference/check.html">devtools::check()</a></code>, run from the command line, returns 0 errors, 0 warnings, and 0 notes.</p></li>
 <li><p><input type="checkbox" disabled>
 The current version number is valid, i.e. if the current app is an update, the version number has been bumped.</p></li>
 <li><p><input type="checkbox" disabled>
@@ -303,7 +303,7 @@ Otherwise you might have to add them manually.</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-12-01.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-12-27.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
