--- a/structuring-project.html
+++ b/structuring-project.html
@@ -107,7 +107,7 @@ This framework will be used a lot throughout this book, and it relies on the ide
 </h3>
 <p>You probably haven’t realized it yet, but if you have built a significant (in terms of size or complexity of the codebase) <a href="http://shiny.rstudio.com">shiny</a> application, chances are you have been using a package-like structure without knowing it.</p>
 <p>Think about your last <a href="http://shiny.rstudio.com">shiny</a> application, which was created as a single-file (<code>app.R</code>) or two-file app (<code>ui.R</code> and <code>server.R</code>).
-On top of these files, what do you needed to make it <strong>a production-ready application</strong>, and why is a package the perfect infrastructure?</p>
+On top of these files, what did you need to make it <strong>a production-ready application</strong>, and why is a package the perfect infrastructure?</p>
 <div id="a.-it-has-metadata" class="section level4 unnumbered">
 <h4>A. It has metadata<a class="anchor" aria-label="anchor" href="#a.-it-has-metadata"><i class="fas fa-link"></i></a>
 </h4>
@@ -1041,7 +1041,7 @@ But whether you have one or thousands of files, it is always a good practice to 
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2021-12-27.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-01-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
