--- a/common-app-caveats.html
+++ b/common-app-caveats.html
@@ -654,7 +654,7 @@ This is where using an R6 for the business logic of your app makes sense: this a
   <span class="co">#  on the input object</span>
   <span class="fu"><a href="https://testthat.r-lib.org/reference/equality-expectations.html">expect_equal</a></span><span class="op">(</span><span class="va">my_data</span><span class="op">$</span><span class="fu">summarize</span><span class="op">(</span><span class="op">)</span>, <span class="fu"><a href="https://rdrr.io/r/base/summary.html">summary</a></span><span class="op">(</span><span class="va">mtcars</span><span class="op">)</span><span class="op">)</span>
 <span class="op">}</span><span class="op">)</span></code></pre></div>
-<pre><code>Test passed 😸</code></pre>
+<pre><code>Test passed 🌈</code></pre>
 <p>Using R6 allows to rely on these battle-tested tools when it comes to testing functions, something which is made more complex when using other patterns like <code><a href="https://shiny.rstudio.com/reference/shiny/latest/reactiveValues.html">reactiveValues()</a></code>.</p>
 </div>
 </div>
@@ -970,7 +970,7 @@ Once this is done, you will have access to the <code>my_dataset</code> object in
 When you are building an application for the “user data” use case, the first thing you will need is to provide users a way to upload their dataset: <code><a href="https://shiny.rstudio.com/reference/shiny/latest/fileInput.html">shiny::fileInput()</a></code>.</p>
 <p>One crucial thing to keep in mind when it comes to using user-uploaded files is that you have to be (very) strict with the way you handle files:</p>
 <ul>
-<li>Always specify what type of file you want: <code><a href="https://shiny.rstudio.com/reference/shiny/latest/fileInput.html">shiny::fileInput()</a></code> has an <code>accept</code> parameter that allows you to set one or more <a href="https://en.wikipedia.org/wiki/Media_type">MIME types</a> or extensions. When using this argument (for example, with <code>text/csv</code>, <code>.csv</code>, or <code>.xslx</code>), the user will only be able to select a subset of files from their computer: the ones that match the type.</li>
+<li>Always specify what type of file you want: <code><a href="https://shiny.rstudio.com/reference/shiny/latest/fileInput.html">shiny::fileInput()</a></code> has an <code>accept</code> parameter that allows you to set one or more <a href="https://en.wikipedia.org/wiki/Media_type">MIME types</a> or extensions. When using this argument (for example, with <code>text/csv</code>, <code>.csv</code>, or <code>.xlsx</code>), the user will only be able to select a subset of files from their computer: the ones that match the type.</li>
 <li>Always perform checks once the file is uploaded, even more if it is tabular data: column type, naming, empty rows, etc. The more you check the file for potential errors, the less your application is likely to fail to analyze this uploaded dataset.</li>
 <li>If the data reading takes a while, do not forget to add a visual progression cue: a <code><a href="https://shiny.rstudio.com/reference/shiny/latest/withProgress.html">shiny::withProgress()</a></code> or tools from the <a href="https://github.com/JohnCoene/waiter"><code>{waiter}</code></a> package.</li>
 </ul>
@@ -1108,7 +1108,7 @@ For more extensive coverage of using databases in R, please follow these resourc
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-01-26.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-02-01.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
