ColinFay published a site update

--- a/common-app-caveats.html
+++ b/common-app-caveats.html
@@ -654,7 +654,7 @@ This is where using an R6 for the business logic of your app makes sense: this a
   <span class="co">#  on the input object</span>
   <span class="fu"><a href="https://testthat.r-lib.org/reference/equality-expectations.html">expect_equal</a></span><span class="op">(</span><span class="va">my_data</span><span class="op">$</span><span class="fu">summarize</span><span class="op">(</span><span class="op">)</span>, <span class="fu"><a href="https://rdrr.io/r/base/summary.html">summary</a></span><span class="op">(</span><span class="va">mtcars</span><span class="op">)</span><span class="op">)</span>
 <span class="op">}</span><span class="op">)</span></code></pre></div>
-<pre><code>Test passed 🥳</code></pre>
+<pre><code>Test passed 😸</code></pre>
 <p>Using R6 allows to rely on these battle-tested tools when it comes to testing functions, something which is made more complex when using other patterns like <code><a href="https://shiny.rstudio.com/reference/shiny/latest/reactiveValues.html">reactiveValues()</a></code>.</p>
 </div>
 </div>
@@ -981,7 +981,7 @@ Finally, having a visual cue that “something is happening” is very important
 There are several options depending on the type of data you are reading.
 Here are some packages that can make the file reading faster:</p>
 <ul>
-<li>For a tabular, flat dataset (typically csv, tsv, or text), <a href="https://github.com/r-lib/vroom">vroom</a> <span class="citation">(Hester and Wickham <a href="references.html#ref-R-vroom" role="doc-biblioref">2020</a><a href="references.html#ref-R-vroom" role="doc-biblioref">b</a>)</span> can read data at a 1.40 GB/sec/sec speed. The <code>fread()</code> function from <a href="http://r-datatable.com">data.table</a> <span class="citation">(Dowle and Srinivasan <a href="references.html#ref-R-data.table" role="doc-biblioref">2019</a>)</span> is also fast at reading delimited files.</li>
+<li>For a tabular, flat dataset (typically csv, tsv, or text), <a href="https://github.com/r-lib/vroom">vroom</a> <span class="citation">(Hester and Wickham <a href="references.html#ref-R-vroom" role="doc-biblioref">2020</a><a href="references.html#ref-R-vroom" role="doc-biblioref">b</a>)</span> can read data at a 1.40 GB/sec speed. The <code>fread()</code> function from <a href="http://r-datatable.com">data.table</a> <span class="citation">(Dowle and Srinivasan <a href="references.html#ref-R-data.table" role="doc-biblioref">2019</a>)</span> is also fast at reading delimited files.</li>
 <li>For JSON files, <a href="https://arxiv.org/abs/1403.2805">jsonlite</a> <span class="citation">(Ooms <a href="references.html#ref-jsonlite2014" role="doc-biblioref">2014</a>)</span>. Or more recently, <code>{RcppSimdJSON}</code> <span class="citation">(Eddelbuettel and Knapp <a href="references.html#ref-R-RcppSimdJson" role="doc-biblioref">2020</a>)</span>, which is a binding to the <code>simdjson</code> C++ library.</li>
 <li>If you need to read Excel files inside your app, <a href="https://readxl.tidyverse.org">readxl</a> <span class="citation">(Wickham and Bryan <a href="references.html#ref-R-readxl" role="doc-biblioref">2019</a>)</span> offers a binding to the <a href="http://rapidxml.sourceforge.net/"><code>RapidXML</code></a> C++ library, which reads Excel files fast.</li>
 <li>Most files exported from statistical software (SAS, SPSS, etc.) can be read using either the <a href="https://svn.r-project.org/R-packages/trunk/foreign">foreign</a> <span class="citation">(R Core Team <a href="references.html#ref-R-foreign" role="doc-biblioref">2020</a>)</span> or <a href="http://haven.tidyverse.org">haven</a> <span class="citation">(Wickham and Miller <a href="references.html#ref-R-haven" role="doc-biblioref">2019</a>)</span> packages.</li>
@@ -1108,7 +1108,7 @@ For more extensive coverage of using databases in R, please follow these resourc
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-03-19.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-04-29.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
