--- a/successful-shiny-app.html
+++ b/successful-shiny-app.html
@@ -106,7 +106,7 @@ And that is probably one of the main reasons why this package has become so succ
 <p>The first version of <a href="http://shiny.rstudio.com">shiny</a> was published in 2012.
 Since then, it has been one of the top projects of the RStudio team.
 At the time of writing these lines (April 2020), there are more than 4700 commits in the master branch of the GitHub repository, made by 46 contributors.
-It is now downloaded around 400K times a month, according to <a href="https://cranlogs.r-pkg.org/badges/shiny">cranlogs</a>, and has 1004 reverse dependencies (i.e. packages that depend on it), according to <code>revdep("shiny")</code> from <a href="https://devtools.r-lib.org/">devtools</a> <span class="citation">(Wickham, Hester, and Chang <a href="references.html#ref-R-devtools" role="doc-biblioref">2020</a>)</span>.</p>
+It is now downloaded around 400K times a month, according to <a href="https://cranlogs.r-pkg.org/badges/shiny">cranlogs</a>, and has 1009 reverse dependencies (i.e. packages that depend on it), according to <code>revdep("shiny")</code> from <a href="https://devtools.r-lib.org/">devtools</a> <span class="citation">(Wickham, Hester, and Chang <a href="references.html#ref-R-devtools" role="doc-biblioref">2020</a>)</span>.</p>
 <p>If you are very new to <a href="http://shiny.rstudio.com">shiny</a>, this book might feel a little bit overwhelming: we will be discussing some advanced <a href="http://shiny.rstudio.com">shiny</a> and software engineering methods, best practices and structural ideas for sending <a href="http://shiny.rstudio.com">shiny</a> applications to production.
 This book relies on the assumption that you already know how to build basic <a href="http://shiny.rstudio.com">shiny</a> applications, and that you want to push your <a href="http://shiny.rstudio.com">shiny</a> skills to the next level: in other words, you are ready to move from the Proof of Concept to the production-grade application.
 If you are very new to <a href="http://shiny.rstudio.com">shiny</a>, we suggest you start with the <a href="https://mastering-shiny.org/"><em>Mastering Shiny</em> book</a> before reading the present book.</p>
@@ -175,7 +175,7 @@ But this can make the interface a little bit more complex for the users, who hav
 We will argue in this book that not enough reactivity is better than too much reactivity, as the latter increases computation time, and relies on the assumption that the user makes the right action on the first try.</p>
 <p>Another good example is <a href="http://shiny.rstudio.com">shiny</a>’s <code>dateRangeInput()</code> function.
 This function requires the user to choose a start date and an end date.
-However, the function allows the user to choose a start date which is before the end (that is the behavior of the JavaScript plugin used in <a href="http://shiny.rstudio.com">shiny</a> to create this input).
+However, the function allows the user to choose a start date which is after the end (that is the behavior of the JavaScript plugin used in <a href="http://shiny.rstudio.com">shiny</a> to create this input).
 But allowing this behavior leads to bugs, notably in a context of full reactivity.
 Handling this special case is completely doable: with a little bit of craft, you can watch what the user inputs and throw an error if the start is after the end.<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content='&lt;p&gt;See &lt;a href="https://github.com/rstudio/shiny/issues/2043#issuecomment-525640738" target="_blank"&gt;shiny/issues/2043#issuecomment-525640738&lt;/a&gt; for an example.&lt;/p&gt;'><sup>8</sup></a>
 On one hand, that solution increases implementation complexity, while on the other hand, allowing this naive behavior requires the user to think carefully about what they are selecting, thus increasing the interface complexity.</p>
@@ -321,7 +321,7 @@ For example, here is how to compute the cloc metric for the <a href="https://git
 8         0.0000000
 9         0.0000000
 10        0.5000000</code></pre>
-<p>One thing that this package also allows is counting the number of lines of commented code: it’s usually a good sign to see that a package has comments in its code-base, as it will allow to work more safely in the future, provided that this metric doesn’t reveal that large portions of the application are “commented code” (as opposed to “code comments”).
+<p>One thing that this package also allows is counting the number of lines of commented code: it’s usually a good sign to see that a package has comments in its codebase, as it will allow to work more safely in the future, provided that this metric doesn’t reveal that large portions of the application are “commented code” (as opposed to “code comments”).
 For example, here we can see that <code>{hemake}</code> has 2345 lines of R code, which come with 669 lines of code comments.</p>
 </div>
 <div id="b.-cyclomatic-complexity" class="section level4 unnumbered">
@@ -623,7 +623,7 @@ And this, again, is hard to do without effective planning and efficient engineer
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-03-19.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-04-29.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
