ColinFay published a site update

--- a/application-presentation.html
+++ b/application-presentation.html
@@ -133,7 +133,7 @@ FIGURE 0.2: The <a href="http://www.github.com/ColinFay/tidytuesday201942">tidyt
 <code>{minifying}</code><a class="anchor" aria-label="anchor" href="#minifying"><i class="fas fa-link"></i></a>
 </h2>
 <p><code>{minifying}</code> is an application to minify CSS, JavaScript, HTML, and JSON files.
-It was built built by Colin as a use case for the workflow of this book.
+It was built by Colin as a use case for the workflow of this book.
 You will find the details of how this app was constructed in the Appendix, “<em>Use case: Building an App, from Start to Finish</em>”.</p>
 <p>Figure <a href="application-presentation.html#fig:00-app-presentation-3">0.3</a> is a screenshot of this application.</p>
 
@@ -202,7 +202,7 @@ The code is available at <a href="https://github.com/ColinFay/minifying">github.
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-04-29.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-05-04.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
