ColinFay published a site update

--- a/ux-matters.html
+++ b/ux-matters.html
@@ -270,7 +270,7 @@ What is the difference between the two?</p>
 <p>The first is that the app is designed in such a way that there is no learning curve to using it.
 A self-explanatory app has a small learning curve, but it is designed in a way that will make the user understand it in a matter of seconds.</p>
 <p>Let’s, for example, get back to our <a href="http://www.github.com/ColinFay/tidytuesday201942">tidytuesday201942</a> <span class="citation">(Fay <a href="references.html#ref-R-tidytuesday201942" role="doc-biblioref">2021</a><a href="references.html#ref-R-tidytuesday201942" role="doc-biblioref">l</a>)</span> application available at <a href="https://connect.thinkr.fr/tidytuesday201942/">connect.thinkr.fr/tidytuesday201942</a>.
-By itself, this application is not self-evident: you need to have a certain amount of of background knowledge before understanding what this application was designed for.
+By itself, this application is not self-evident: you need to have a certain amount of background knowledge before understanding what this application was designed for.
 For example, you might need to have a vague sense of what <code>tidytuesday</code> is.
 If you do not, you will have to read the home text, which will help you understand what this is.
 Then, if we have a look at the menu elements, we see that these are a series of functions from <a href="https://ggplot2.tidyverse.org">ggplot2</a> <span class="citation">(Wickham, Chang, et al. <a href="references.html#ref-R-ggplot2" role="doc-biblioref">2021</a>)</span>: without any background about the package, you might find it difficult to understand what this app actually does.</p>
@@ -905,7 +905,7 @@ It also comes with tools for Java and JavaScript, and notably with a NodeJS modu
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-05-05.</p>
+    <p>"<strong>Engineering Production-Grade Shiny Apps</strong>" was written by Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard. It was last built on 2022-08-27.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
