--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </h1>
 <p><img src="img/engineering-shiny.jpeg" width="300" align="right" alt="" class="cover"> Welcome to “Engineering Production-Grade Shiny Apps” by <a href="https://colinfay.me/">Colin Fay</a>, <a href="statnmap.com">Sébastien Rochette</a>, <a href="https://rtask.thinkr.fr/consultants-r-experts/vincent-guyader/">Vincent Guyader</a> and <a href="https://rtask.thinkr.fr/consultants-r-experts/cervan-girard">Cervan Girard</a>.</p>
 <p>This book is available in print, published in the <a href="https://www.crcpress.com/go/the-r-series">R Series</a> by Chapman and Hall/CRC.</p>
-<p>You can grab a copy on <a href="https://www.routledge.com/Engineering-Production-Grade-Shiny-Apps/Fay-Rochette-Guyader-Girard/p/book/9780367466022">routledge.com</a>.</p>
+<p>You can grab a copy on <a href="https://www.routledge.com/Engineering-Production-Grade-Shiny-Apps/Fay-Rochette-Guyader-Girard/p/book/9780367466022?utm_source=author&utm_medium=shared_link&utm_campaign=B043139_jm1_5ll_6rm_t081_1al_engineeringproduction-gradeshinyappsauthorshare">routledge.com</a>.</p>
 <p>The online version of this book is free to read here (thanks to Chapman &amp; Hall/CRC), and licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
 <div id="motivation" class="section level2 unnumbered">
 <h2>Motivation<a class="anchor" aria-label="anchor" href="#motivation"><i class="fas fa-link"></i></a>
